# siconos

./: .clang-format  .gitlab-ci.yml  .travis.yml  AUTHORS  AlartCurnier.tex  CMakeLists.txt  CTestConfig.cmake  Changelog  CodingRules  Config.cmake.in  DSClassDiagram.xmi  DevNotes.tex  INSTALL  LieGroupTheory.tex  MCP-FullThetaGamma.tex  MCP_linearized-FullThetaGamma.tex  MCP_linearized.tex  MCP_linearized_2.tex  MCP_linearized_linear.tex  NewtonEuler.tex  Quartic.m  README  README.md  appveyor.yml  bibli.bib  chapterNewton.tex  chapterNewtonLagrangian.tex  codemeta.json  config.h.cmake  credits.md  default.nix  macro.tex  nix-usage.md  siconos-config.cmake.in  siconos.nix  siconos.spec
Control/src/: CMakeLists.txt  ControlTypeDef.hpp  SiconosControl.hpp  SiconosControlFwd.hpp
Docs/: CMakeLists.txt  Makefile.am  README  Wikipedia.wiki  configure.ac  doxygen.am  runDoxygen
Docs/Dev/: FrontEnd.html  README  cover.html  design-src-org.html  design.html  feature-set.html  features.html  glossary-std.html  glossary.html  index.html  inputOutput.html  model.html  modelingTools.html  plugin.html  proposal.html  qa-plan.html  sdm.html  simulationTools.html  srs.html  use-case-suite.html  use-cases.html  utils.html
Docs/DevNotes/: CallStack.html  ChapterIndex.tex  ChapterLevelsAndIndices.tex  DevNotes.tex  MCP_linearized-FullThetaGamma.tex  MCP_linearized.tex  MCP_linearized_2.tex  MCP_linearized_linear.tex  NewtonEuler.tex  NewtonImpactJacobian.tex  ProjOnConstraints.tex  QuarticFormulation.tex  chapterNewton.tex  chapterNewtonLagrangian.tex  macro.tex
Docs/Dev_Notes/: README
Docs/Dev_html/: design-src-org.html  index.html  inputOutput.html  qa-plan.html  readyset-license.html
Docs/Drafts/: DevNotes.tex  main.tex
Docs/HomePage/: SiconosWeb.tag
Docs/SiconosProjectOverview/: FrontEnd.html  README  design.html  inputOutput.html  model.html  proposal.html  qa-plan.html  sdm.html  use-case-suite.html  utils.html
Docs/TeX-tools/: PPRVincent.sty  README  acronym.gdf  colorPPR.tex  cover-Template.tex  doc2pdf.sh  macro-Slide.tex  macro-SlidePPR.tex  notation.gdf  package-Slide.tex
Docs/User/: README  package.tex
Docs/config/: Make-rules  Makefile.am  doxy.config.in  doxy_warnings.config.in  mainpage.doxygen  mystyle.sty
Docs/css/: WebSiconos.css  footer.html  header.html
Docs/doxygen_layout/: footer.html  header.html
Docs/figures/: classDynamicalSystem.eps  classEventDriven.eps  classNonSmoothLaw.eps  classRelation.eps  classSimulation.eps  treeview.eps
Docs/htdocs/: README  SiconosDocList.html  developments.html  graph_legend.html  index.html  installdox  related.html  scientificComputing.html
Docs/macros/: acx_check_numerics.m4
Docs/sphinx/: conf.py.in  contacts.rst  documentation_index.rst  documentation_index_dev.rst  download.rst  index.rst.in  license.rst  related_projects.rst  siconos.bib  talks.rst  z_siconos_bibtex.rst
Docs/sphinx_sources/: conf.py.in  index.rst  index.rst.in
Examples/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  cmake  config.h.cmake  configure.ac
Examples/config/: Make-rules  Makefile  Makefile.am  SiconosExamples.cfg  doxy.config.in
Examples/figures/: filesList.eps  samplesTreeview.eps
Examples/src/: AddInRelease.dox  ExamplesManual.dox  GenDocEx.dox
Front-End/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  config.h.cmake  configure.ac  configure.ac.old  reconf.sh
Front-End/config/: Make-rules  Makefile.am  doxy.config.in  mainpage.doxygen
Front-End/m4/: acx_check_kernel.m4  acx_check_numerics.m4
Front-End/macros/: ac_pkg_swig.m4  ac_python_devel.m4  acx_check_kernel.m4  acx_check_numerics.m4
Front-End/python/: BouncingBall_TIDS.xml  Makefile.am  compile.sh  correctif.sh  createLibSiconos.sh  pyBouncingBall.py.test  pyBouncingBall2.py.test  pySiconos.csh  pySiconos.i  pySiconosEnv.csh
Front-End/scilab/: BouncingBall.sci  Make-test  Makefile  Makefile.am  README  RollBouncingBall.sci  SiconosApiSci.c  SiconosApiSci.h  SiconosSci.c  SiconosSci.h  TODO  ThreeBeadsColumn.sci  builder.sce  env.sh  env.sh.in  loader.sce.in  loaderSiconos.sce.in  sample.sci  siconos.cpp  siconos.h  siconos.sci  sictest.c  visuballs.sci
Front-End/src/: CMakeLists.txt  CMakeLists.txt.in  SiconosGenerator.py.in  code-generator.py.in  doxygen.py
IO/src/: CMakeLists.txt  Dump.cpp  Dump.hpp  MechanicsIO.cpp  MechanicsIO.hpp  Register.hpp  RegisterModel.hpp  RegisterModelIbin.cpp  RegisterModelIxml.cpp  RegisterModelObin.cpp  RegisterModelOxml.cpp  SiconosFull.hpp  SiconosFullGenerated.hpp  SiconosFullNumerics.hpp  SiconosKernelGenerated.hpp  SiconosRestart.cpp  (+1 more)
Kernel/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.inc  Makefile.inc.MacOsX  Makefile.inc.linux  README  autogen.sh  cmake  config.h.cmake  configure.ac  configure.ac.old  kernel.csh.TEMPLATE  reconf.sh  siconos.csh.TEMPLATE
Mechanics/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  mechanics_tests.cmake
Numerics/: AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  Config.cmake.in  ConfigVersion.cmake.in  DefaultMangle.h.in  Examples  INSTALL  Makefile  Makefile.am  Makefile.inc.MacOsX  Makefile.inc.linux  README  autogen.sh  config.h.cmake  configure.ac  configure.ac.old  numerics_tests.cmake  reconf.sh
control/: CMakeLists.txt  control_tests.cmake
docs/: CMakeLists.txt  README  Readme.md  build-doc.yml  doctools.py  find_doxygen_diagrams.py  full_doc_index.rst  replace_py_escape.sh  requirements.txt  sicodoxy2swig.py
examples/: CI  CMakeLists.txt  CTestConfig.cmake  ChangeLog
io/: CMakeLists.txt  io_tests.cmake
kernel/: CMakeLists.txt  kernel_tests.cmake
mechanics/: CMakeLists.txt  mechanics_tests.cmake
mechanisms/: CMakeLists.txt  infoMBTB.doxygen  mechanisms_tests.cmake
numerics/: CMakeLists.txt  numerics_tests.cmake
wrap/: CMakeLists.txt  MANIFEST.in  __init__.py.in  append-swig-pythonlibs.py.in  conftest.py.in  doxy2swig.py  fake_setup.py  find_python_install.py  pyproject.toml  requirements4tests.txt  runtests.py.in  set_tests_env.sh.in  setup.cfg.in  setup.py.in  tests_setup.py.in  tox.ini.in
(+9560 files in other folders)
