CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

# CMP0011 policy before first include
# others policies are set in SiconosProject
IF(POLICY CMP0011)
  CMAKE_POLICY(SET CMP0011 NEW)
ENDIF(POLICY CMP0011)

INCLUDE(SiconosProject)
OPTION(WITH_DOCUMENTATION "Build doxygen documentation with 'make doc'" ON)

SET(PACKAGE_DESCRIPTION_SUMMARY 
  "Siconos/Docs is the main Siconos documentation")

SET(PACKAGE_DESCRIPTION 
  "Siconos is a program dedicated to modeling, simulation and control of
Non Smooth Dynamical Systems (NSDS). The present package,
Siconos/Docs provides the main user documentation.")

COMPILE_WITH(Doxygen REQUIRED)

SICONOS_PROJECT(Docs 3 4 0)

# main documentation specificities
SET(DOCUMENTATION_DIRECTORIES
  DevNotes
  HomePage
  SiconosProjectOverview
  User/UsersGuide
  User/InstallGuide
  User/GettingStarted)


FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT})
FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT}/Draft)



# css
FILE(GLOB CSS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/css/*.css)
FILE(GLOB HTML_FILES ${CMAKE_CURRENT_SOURCE_DIR}/css/*.html)
FILE(GLOB PNG_FILES ${CMAKE_CURRENT_SOURCE_DIR}/css/*.png)
FOREACH(_F ${CSS_FILES} ${HTML_FILES} ${PNG_FILES})
  FILE(RELATIVE_PATH _RF ${CMAKE_CURRENT_SOURCE_DIR} ${_F})
  CONFIGURE_FILE(${_F}
    ${CMAKE_CURRENT_BINARY_DIR}/${_RF}
    @ONLY)
ENDFOREACH(_F ${CSS_FILES} ${HTML_FILES} ${PNG_FILES})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/css/logo_bipop.png 
  ${DOXYGEN_OUTPUT}/HomePage/logo_bipop.png COPYONLY)


FOREACH(_D ${DOCUMENTATION_DIRECTORIES})
  FILE(GLOB SRC_CFG_FILES ${CMAKE_CURRENT_SOURCE_DIR}/${_D}/config/*.cfg)
  FOREACH(_F ${SRC_CFG_FILES})
    LIST(APPEND DOXY_SRC_CFG_FILES ${_F})
  ENDFOREACH(_F ${SRC_CFG_FILES})
  FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT}/${_D})
ENDFOREACH(_D ${DOCUMENTATION_DIRECTORIES})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/runDoxygen ${CMAKE_CURRENT_BINARY_DIR}/runDoxygen)

SET(WITH_TESTING FALSE)

IF(DOXY_SRC_CFG_FILES)
  FOREACH(_F ${DOXY_SRC_CFG_FILES})
    FILE(RELATIVE_PATH _RF ${CMAKE_CURRENT_SOURCE_DIR} ${_F})
    CONFIGURE_FILE(${_F}
      ${CMAKE_CURRENT_BINARY_DIR}/${_RF}
      @ONLY)

    LIST(APPEND DOXY_CFG_FILES ${CMAKE_CURRENT_BINARY_DIR}/${_RF})

  ENDFOREACH(_F ${DOXY_SRC_CFG_FILES})

  ADD_CUSTOM_TARGET(doc_internal COMMAND ${CMAKE_CURRENT_BINARY_DIR}/runDoxygen ${DOXYGEN_EXECUTABLE} ${DOXY_CFG_FILES})

  ADD_DEPENDENCIES(doc doc_internal)

ENDIF(DOXY_SRC_CFG_FILES)
