# cmake -DCMAKE_INSTALL_PREFIX=<your installation dir> <path>
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

INCLUDE(SiconosProject)

ENABLE_LANGUAGE(C)
ENABLE_LANGUAGE(CXX)
ENABLE_LANGUAGE(Fortran) 

SET(EXAMPLES_DIRECTORIES
  Biology
  Control
  Electronics
  Mechanics
  Numerics
  Robotics/HuMAns_pa10
)

SET(NO_TEST_FILES QGL)

SICONOS_PROJECT(Examples)

COMPILE_WITH(SiconosNumerics REQUIRED)
COMPILE_WITH(SiconosKernel REQUIRED)
COMPILE_WITH(SiconosMechanics)

MACRO(ADD_EXAMPLE_DIRECTORY _N)
  MESSAGE("Adding example ${_N}")
  FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${_N})
  CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cmake/CMakeListsForExamples.cmake 
    ${CMAKE_CURRENT_BINARY_DIR}/${_N}/CMakeLists.txt @ONLY)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_BINARY_DIR}/${_N} 
    ${CMAKE_CURRENT_BINARY_DIR}/${_N})
ENDMACRO(ADD_EXAMPLE_DIRECTORY _N)

FOREACH(_D ${EXAMPLES_DIRECTORIES})
  FILE(GLOB EXAMPLES_P ${CMAKE_SOURCE_DIR}/${_D}/*/*.cpp )
  IF(EXAMPLES_P)
    FOREACH(_P ${EXAMPLES_P})
      GET_FILENAME_COMPONENT(_RP ${_P} ABSOLUTE)
      LIST(APPEND EXAMPLES ${_RP})
    ENDFOREACH(_P ${EXAMPLES_P})
  ENDIF(EXAMPLES_P)
ENDFOREACH(_D ${EXAMPLES_DIRECTORIES})

FOREACH(EXAMPLE ${EXAMPLES})
  IF(NOT EXAMPLE MATCHES Plugin)
    SET(TEST_ME TRUE)
    FOREACH(_NT ${NO_TEST_FILES})
      IF(EXAMPLE MATCHES "${_NT}")
        SET(TEST_ME FALSE)
      ENDIF(EXAMPLE MATCHES "${_NT}")
    ENDFOREACH(_NT ${NO_TEST_FILES})
    IF(TEST_ME)
      GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
      ADD_EXAMPLE_DIRECTORY(${EXAMPLE_NAME})
    ENDIF(TEST_ME)
  ENDIF(NOT EXAMPLE MATCHES Plugin)
ENDFOREACH(EXAMPLE ${EXAMPLES})

FOREACH(_D ${EXAMPLES_DIRECTORIES})
  FILE(GLOB EXAMPLES_PY ${CMAKE_SOURCE_DIR}/${_D}/*/*.py )
  IF(EXAMPLES_PY)
    FOREACH(_PY ${EXAMPLES_PY})
      GET_FILENAME_COMPONENT(_RPY ${_PY} ABSOLUTE)
      LIST(APPEND EXAMPLES_PY ${_RPY})
    ENDFOREACH(_PY ${EXAMPLES_PY})
  ENDIF(EXAMPLES_PY)
ENDFOREACH(_D ${EXAMPLES_DIRECTORIES})

FOREACH(EXAMPLE ${EXAMPLES_PY})
  SET(TEST_ME TRUE)
  FOREACH(_NT ${NO_TEST_FILES})
    IF(EXAMPLE MATCHES "${_NT}")
      SET(TEST_ME FALSE)
    ENDIF(EXAMPLE MATCHES "${_NT}")
  ENDFOREACH(_NT ${NO_TEST_FILES})
  IF(TEST_ME)
    GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
    ADD_EXAMPLE_DIRECTORY(${EXAMPLE_NAME})
  ENDIF(TEST_ME)
ENDFOREACH(EXAMPLE ${EXAMPLES_PY})

# The following should work, but isn't ... so I used NO_TEST_FILES -- xhub
#SET_TESTS_PROPERTIES("SliderCrankD1MinusLinear" PROPERTIES WILL_FAIL TRUE)
