# Set minimum version for cmake
cmake_minimum_required(VERSION 2.8.7)

# MACOSX_RPATH required from cmake 3.0.
# See http://www.kitware.com/blog/home/post/510
if(POLICY CMP0042)
  cmake_policy(SET CMP0042 OLD)
endif()
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

include(SiconosTools)
get_uninitialized_vars(CMAKE_ARGS_FROM_CACHE)

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
  STRING(REGEX REPLACE "\\\;" ";" ENV_PATH "$ENV{PATH}")
  STRING(REGEX REPLACE "\\\\" "/" ENV_PATH "${ENV_PATH}")
  STRING(REGEX REPLACE "\;" "\\\;" ENV_PATH "${ENV_PATH}")
  STRING(REGEX REPLACE "\"" "" ENV_PATH "${ENV_PATH}")
ENDIF()

INCLUDE(SiconosProject)

ENABLE_LANGUAGE(C)
ENABLE_LANGUAGE(CXX)

SET(EXAMPLES_DIRECTORIES
  Biology
  Control
  Electronics
  Mechanics
  Numerics
  Robotics/HuMAns_pa10
)

SET(NO_TEST_FILES QGL)

# sharing a double between an executable and a library is hackisch
IF(MSVC)
  SET(NO_TEST_FILES ${NO_TEST_FILES} RockingBlock Pendulum)
ENDIF(MSVC)

COMPILE_WITH(SiconosNumerics REQUIRED)
COMPILE_WITH(SiconosKernel REQUIRED)
COMPILE_WITH(SiconosMechanics)

IF(SiconosKernel_CMAKE_DIR)
  LIST(APPEND CMAKE_MODULE_PATH ${SiconosKernel_CMAKE_DIR})
  INCLUDE(NumericsCmakeConfig)
  IF(NOT HAS_ONE_LP_SOLVER)
    SET(NO_TEST_FILES ${NO_TEST_FILES} SMCElectroPneumaticItw Twisting)
  ENDIF(NOT HAS_ONE_LP_SOLVER)
ENDIF(SiconosKernel_CMAKE_DIR)

SICONOS_PROJECT(Examples)



MACRO(ADD_EXAMPLE_DIRECTORY _N)
  MESSAGE("Adding example directory ${_N}")
  FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${_N})
  CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cmake/CMakeListsForExamples.cmake 
    ${CMAKE_CURRENT_BINARY_DIR}/${_N}/CMakeLists.txt @ONLY)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_BINARY_DIR}/${_N} 
    ${CMAKE_CURRENT_BINARY_DIR}/${_N})
ENDMACRO(ADD_EXAMPLE_DIRECTORY _N)

FOREACH(_D ${EXAMPLES_DIRECTORIES})
  FILE(GLOB EXAMPLES_P ${CMAKE_SOURCE_DIR}/${_D}/*/*.cpp )
  IF(EXAMPLES_P)
    FOREACH(_P ${EXAMPLES_P})
      GET_FILENAME_COMPONENT(_RP ${_P} ABSOLUTE)
      LIST(APPEND EXAMPLES ${_RP})
    ENDFOREACH(_P ${EXAMPLES_P})
  ENDIF(EXAMPLES_P)
ENDFOREACH(_D ${EXAMPLES_DIRECTORIES})

FOREACH(EXAMPLE ${EXAMPLES})
  IF(NOT EXAMPLE MATCHES Plugin)
    SET(TEST_ME TRUE)
    FOREACH(_NT ${NO_TEST_FILES})
      IF(EXAMPLE MATCHES "${_NT}")
        SET(TEST_ME FALSE)
      ENDIF(EXAMPLE MATCHES "${_NT}")
    ENDFOREACH(_NT ${NO_TEST_FILES})
    IF(TEST_ME)
      GET_FILENAME_COMPONENT(EXAMPLE_DIR ${EXAMPLE} PATH)
      GET_FILENAME_COMPONENT(EXAMPLE_UPDIR ${EXAMPLE_DIR} NAME)
      GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
      ADD_EXAMPLE_DIRECTORY(${EXAMPLE_UPDIR}/${EXAMPLE_NAME})
    ENDIF(TEST_ME)
  ENDIF(NOT EXAMPLE MATCHES Plugin)
ENDFOREACH(EXAMPLE ${EXAMPLES})

FOREACH(_D ${EXAMPLES_DIRECTORIES})
  FILE(GLOB EXAMPLES_PY ${CMAKE_SOURCE_DIR}/${_D}/*/*.py )
  IF(EXAMPLES_PY)
    FOREACH(_PY ${EXAMPLES_PY})
      GET_FILENAME_COMPONENT(_RPY ${_PY} ABSOLUTE)
      LIST(APPEND EXAMPLES_PY ${_RPY})
    ENDFOREACH(_PY ${EXAMPLES_PY})
  ENDIF(EXAMPLES_PY)
ENDFOREACH(_D ${EXAMPLES_DIRECTORIES})

FOREACH(EXAMPLE ${EXAMPLES_PY})
  SET(TEST_ME TRUE)
  FOREACH(_NT ${NO_TEST_FILES})
    IF(EXAMPLE MATCHES "${_NT}")
      SET(TEST_ME FALSE)
    ENDIF(EXAMPLE MATCHES "${_NT}")
  ENDFOREACH(_NT ${NO_TEST_FILES})
  IF(TEST_ME)
    GET_FILENAME_COMPONENT(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
    ADD_EXAMPLE_DIRECTORY(${EXAMPLE_NAME})
  ENDIF(TEST_ME)
ENDFOREACH(EXAMPLE ${EXAMPLES_PY})

# The following should work, but isn't ... so I used NO_TEST_FILES -- xhub
#SET_TESTS_PROPERTIES("SliderCrankD1MinusLinear" PROPERTIES WILL_FAIL TRUE)
